Fixed Image on Mobile

--- a/src/style.css
+++ b/src/style.css
@@ -81,7 +81,7 @@ form {
 }
 @media only screen and (max-width: 600px) {
   img#images {
-    height: 400px;
+    height: 350px;
     width: 100%;
     background-size: cover;
     overflow: hidden;
@@ -98,7 +98,7 @@ form {
   #text {
     width: 100% !important;
     position: relative !important;
-    margin-top: 400px !important;
+    margin-top: 350px !important;
     margin-left: 3% !important;
     text-align: center !important;
     font-size: 1vw !important;
